src/render/snapshots/webgit__render__tag__tests__tag_html_annotated.snap
---
source: src/render/tag.rs
expression: "render(TagProps\n{\n    name: \"v1.0.0\".to_string(), snapshot_name:\n    \"webgit-v1.0.0.tar.gz\".to_string(), bundle_name:\n    \"webgit-v1.0.0.bundle\".to_string(), date:\n    \"2026-01-15 12:34:56 +00:00\".to_string(), tagger_name:\n    Some(\"Kunal Mehta\".to_string()), commit:\n    \"0123abcd0123abcd0123abcd0123abcd0123abcd\".to_string(), contents:\n    Some(\"Release 1.0.0\\n\\nSigned-off-by: Kunal Mehta\".to_string()),\n})"
---
<table class="tag-table">
<tbody>
<tr>
<td class="label">tag name</td>
<td>v1.0.0</td>
</tr>
<tr>
<td class="label">tag date</td>
<td>2026-01-15 12:34:56 +00:00</td>
</tr>
<tr>
<td class="label">tagged by</td>
<td>Kunal Mehta</td>
</tr>
<tr>
<td class="label">tagged object</td>
<td class="mono">
<a href="#!/commit/0123abcd0123abcd0123abcd0123abcd0123abcd">0123abcd0123abcd0123abcd0123abcd0123abcd</a>
</td>
</tr>
<tr>
<td class="label">browse</td>
<td>
<a href="#!/tree?h=v1.0.0">tree</a> | <a href="#!/log?h=v1.0.0">log</a>
</td>
</tr>
<tr>
<td class="label">download</td>
<td>
<a href="#!/snapshot?h=v1.0.0" class="snapshot-link">webgit-v1.0.0.tar.gz</a> | <a href="#!/snapshot?h=v1.0.0&amp;format=bundle" class="snapshot-link">webgit-v1.0.0.bundle</a>
</td>
</tr>
</tbody>
</table>
<pre class="tag-message">Release 1.0.0

Signed-off-by: Kunal Mehta</pre>
