src/render/snapshots/webgit__render__tag__tests__tag_html_lightweight.snap
---
source: src/render/tag.rs
expression: "render(TagProps\n{\n    name: \"v0.9.0\".to_string(), snapshot_name:\n    \"webgit-v0.9.0.tar.gz\".to_string(), bundle_name:\n    \"webgit-v0.9.0.bundle\".to_string(), date:\n    \"2025-11-02 08:00:00 +00:00\".to_string(), tagger_name: None, commit:\n    \"89abcdef89abcdef89abcdef89abcdef89abcdef\".to_string(), contents: None,\n})"
---
<table class="tag-table">
<tbody>
<tr>
<td class="label">tag name</td>
<td>v0.9.0</td>
</tr>
<tr>
<td class="label">tag date</td>
<td>2025-11-02 08:00:00 +00:00</td>
</tr>
<tr>
<td class="label">tagged object</td>
<td class="mono">
<a href="#!/commit/89abcdef89abcdef89abcdef89abcdef89abcdef">89abcdef89abcdef89abcdef89abcdef89abcdef</a>
</td>
</tr>
<tr>
<td class="label">browse</td>
<td>
<a href="#!/tree?h=v0.9.0">tree</a> | <a href="#!/log?h=v0.9.0">log</a>
</td>
</tr>
<tr>
<td class="label">download</td>
<td>
<a href="#!/snapshot?h=v0.9.0" class="snapshot-link">webgit-v0.9.0.tar.gz</a> | <a href="#!/snapshot?h=v0.9.0&amp;format=bundle" class="snapshot-link">webgit-v0.9.0.bundle</a>
</td>
</tr>
</tbody>
</table>
